fix+style: 당첨 번호를 입력받을 때 오류가 발생하는 문제 수정, 에러 메시지 상수로 대체