@@ -4,6 +4,7 @@ import camp.nextstep.edu.missionutils.Console;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class InputUI {
     public static int inputPaid() {
@@ -13,7 +14,9 @@ public class InputUI {
 
     public static List<Integer> inputUserNum() {
         System.out.println("당첨 번호를 입력해 주세요.");
-        return Arrays.stream(Console.readLine().split(",")).map(Integer::parseInt).toList();
+        return Arrays.stream(Console.readLine().split(","))
+                .map(Integer::parseInt)
+                .collect(Collectors.toList());
     }
 
     public static int inputBonusNum() {
